welcome.lessons.welcome.bat.bool1.In3050.scala.error
in3050:10: error: Unmatched closing brace '}' ignored here
 }
 ^